--- a/app/styles/blocks/_layout-containers.scss
+++ b/app/styles/blocks/_layout-containers.scss
@@ -64,7 +64,7 @@ body:not(.navigation-hidden) {
     padding-right: $main-cont-padding-small;
   }
 
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .navigation-hidden {
