--- a/app/styles/elements/_header-navbar-menu.scss
+++ b/app/styles/elements/_header-navbar-menu.scss
@@ -12,7 +12,7 @@ ul.header-navbar-menu {
   @media (min-width:$screen-s-min) {
     float:left;
     margin-left:0;
-    padding-left:75px;
+    //padding-left:75px;
   }
 
   @media (min-width:$navbar-lg-min) {
